samples/_failures_safe/1761488241_8cb02c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_60d3a2b0.c: In function ‘main’:
./samples/SAFE/__tmp_60d3a2b0.c:176:5: error: expected expression at end of input
  176 |     int token_count = tokenize(input,
      |     ^~~
./samples/SAFE/__tmp_60d3a2b0.c:176:23: error: too few arguments to function ‘tokenize’
  176 |     int token_count = tokenize(input,
      |                       ^~~~~~~~
./samples/SAFE/__tmp_60d3a2b0.c:37:5: note: declared here
   37 | int tokenize(const char* input, struct Token* tokens, int max_tokens) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_60d3a2b0.c:176:5: error: expected declaration or statement at end of input
  176 |     int token_count = tokenize(input,
      |     ^~~
